[metadata]
name = endpoints-token
version = 0.0.1
author = Ray
author_email = ray_alekseev@gmail.com
description = A list of endpoints
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src